# wiki-words-to-video

./: .gitignore  README.md  capture.py  center_diagnostics.py  centers.csv  clean_runs.py  compute_center_error.py  fast_wikiclip.py  pyproject.toml  requirements.txt  run_wikiclip_with_diagnostics.py  video_utils.py  wikiclip.py  wikiclip_sentence.py  zoom_utils.py
diagnostics/: anomalies.txt
